# vector-map-localization

libvectormap/: package.xml
libvectormap/include/: vector_map.h
libvectormap/src/: vector_map.cpp
projector/: AreaListDrawObject.cpp  AreaListDrawObject.h  BitmapBackground.cpp  BitmapBackground.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraImageBackground.cpp  CameraImageBackground.h  CameraInfo.yaml  DrawObject.h  Framebuffer.cpp  Framebuffer.h  ImageDB.cpp  ImageDB.h  ImageMatcher.cpp  ImageMatcher.h  LaneListDrawObject.cpp  LaneListDrawObject.h  LineListDrawObject.cpp  LineListDrawObject.h  PointListDrawObject.cpp  PointListDrawObject.h  RectangleDrawObject.cpp  RectangleDrawObject.h  SceneManager.cpp  SceneManager.h  ShaderProgram.cpp  ShaderProgram.h  SignalsDrawObject.cpp  SignalsDrawObject.h  VectorMapDisplay.cpp  VectorMapDisplay.h  VectorMapDrawObject.cpp  VectorMapDrawObject.h  VectorMapMatchWindow.cpp  VectorMapMatchWindow.h  VectorMapObjects.cpp  VectorMapObjects.h  VectorMapRenderWidget.cpp  (+24 more)
renderer/: VectorMapRenderer.pro
signal_pub_node/: CMakeLists.txt  package.xml  signals.cpp
signal_pub_node/msg/: Signals.msg
vectormap_slam/: AreaList.cpp  AreaList.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraDisplay.cpp  CameraDisplay.h  Crosswalk.cpp  Crosswalk.h  DirectionArrow.cpp  DirectionArrow.h  DrawObjects.cpp  DrawObjects.h  Formulas.wxm  Gutters.cpp  Gutters.h  ImageDisplay.cpp  ImageDisplay.h  ImageMatch.cpp  ImageMatch.h  Jacobian for Projection from Camera Coordinate.wxm  LineList.cpp  LineList.h  LineRenderer.cpp  LineRenderer.h  LinesRaw.cpp  LinesRaw.h  MatchWindow.cpp  MatchWindow.cpp.bak  MatchWindow.h  MatchWindow.h.bak  Math.h  PointSolver.cpp  PointSolver.h  PointSolver2.cpp  PointSolver2.h  PolesDraw.cpp  PolesDraw.h  Pose.cpp  Pose.h  (+24 more)
vectormap_slam/notes/: flowchart_for_line_projection.txt
vislab_3dv_node/: 3dv.cpp  CMakeLists.txt  package.xml  vislab_3dv_node.cpp
