<?xml version="1.0"?>
<package>
  <name>libvectormap</name>
  <version>0.1.0</version>
  <description>Common Library to Read Vector Map</description>

  <maintainer email="sujiwo@todo.todo">sujiwo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
